IndexedDB: Fix reverse cursor with non-existent upper bound https://bugs.webkit.org/show_bug.cgi?id=73220

Reviewed by Tony Chang.

Source/WebCore:

The code previously did not properly handle the case where the
specified upper bound for a reverse cursor did not exist.

Test: storage/indexeddb/cursor-reverse-bug.html

* storage/IDBLevelDBBackingStore.cpp:
(WebCore::findGreatestKeyLessThanOrEqual):
(WebCore::IDBLevelDBBackingStore::openObjectStoreCursor):
(WebCore::IDBLevelDBBackingStore::openIndexKeyCursor):
(WebCore::IDBLevelDBBackingStore::openIndexCursor):

LayoutTests:

Add test to check that opening a reverse cursor works even when the
key specified as the upper bound does not exist.

* storage/indexeddb/cursor-reverse-bug-expected.txt: Added.
* storage/indexeddb/cursor-reverse-bug.html: Added.

Canonical link: https://commits.webkit.org/90120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101648 268f45cc-cd09-0410-ab3c-d52691b4dbfc